implement soft delete candidate
